Testing completato sul file DispatchService.java. Risolte tutte le vulnerabilità evidenziate.